syntax = "proto3";

package post;

import "google/protobuf/timestamp.proto";


option go_package = "github.com/NorthDice/DeepLink/protos;postv1";

service Post {
  rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
  rpc GetPost (GetPostRequest) returns (GetPostResponse);
  rpc ListPosts (ListPostsRequest) returns (ListPostsResponse);
  rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);
  rpc LikePost (LikePostRequest) returns (LikePostResponse);
  rpc AddComment (AddCommentRequest) returns (AddCommentResponse);
}

message CreatePostRequest {
  int64 user_id = 1;
  string content = 2;
  repeated string media_url = 3;
}

message CreatePostResponse {
  int64 post_id = 1;
}
message GetPostRequest {
  int64 post_id = 1;
}
message GetPostResponse {
  int64 post_id = 1;
  int64 user_id = 2;
  string content = 3;
  repeated string media_url = 4;
  google.protobuf.Timestamp created_at = 5;
  int32 likes_count = 6;
  repeated Comment comments = 7;
}
message ListPostsRequest {
  int32 page = 1;
  int32 page_size = 2;
}
message ListPostsResponse {
  repeated GetPostResponse posts = 1;
}
message DeletePostRequest {
  int64 post_id = 1;
}
message DeletePostResponse {
  bool success = 1;
}
message LikePostRequest {
  int64 post_id = 1;
  int64 user_id = 2;
}
message LikePostResponse {
  bool success = 1;
}
message AddCommentRequest {
  int64 post_id = 1;
  int64 user_id = 2;
  string content = 3;
}

message AddCommentResponse {
  bool success = 1;
}
message Comment {
  int64 user_id = 1;
  string content = 2;
  google.protobuf.Timestamp created_at = 3;
}